Change gateway methods and test